# TelloDrone_CV-Nav

./: .gitmodules  README.md  interface_setup.bash
ros2_ws/src/tello_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/tello_bringup/config/: aruco_pose_config.yaml  pose_trajectory_config.yaml
ros2_ws/src/tello_bringup/launch/: aruco_pose.launch.py  pose_trajectory.launch.py
ros2_ws/src/tello_control/: package.xml  setup.py
ros2_ws/src/tello_control/tello_control/: pose_controller.py  waypoint_service.py  waypoints_publisher.py
ros2_ws/src/tello_driver/: package.xml  setup.py
ros2_ws/src/tello_driver/tello_driver/: tello_driver_node.py
ros2_ws/src/tello_utils/: package.xml  setup.cfg  setup.py
ros2_ws/src/tello_utils/tello_utils/: matrix_helpers.py
ros2_ws/src/tello_vision/: package.xml  setup.py
ros2_ws/src/tello_vision/tello_vision/: aruco_detector.py  downward_camera.py  pose_estimator.py  tello_downward_camera.py
scenes/: ArUcoMarkerBoard.ttt
